Piccolo backup pre stravolgimento.