@@ -4,7 +4,10 @@ import org.bson.Document;
 import src.gallettabot.java.Button;
 import src.gallettabot.java.DatabaseClient;
 
+import java.net.URL;
 import java.util.*;
+
+import static src.gallettabot.java.Utilities.isLink;
 
 public class CommonMenu extends Menu {
 
@@ -20,13 +23,21 @@ public class CommonMenu extends Menu {
         this.setTextToPrint("Seleziona la funzionalità");
         try {
             Document document = super.getClient().getMongo().getDatabase("gallettabot").getCollection("menus").find(new Document("name", "commonMenu")).first();
+            String whatToDo = "";
+            Map<String, String> appointment;
             if (document != null) {
-                Map<String, String>func = (Map<String, String>) document.get("functionalities");
+                Map<String, Object>func = (Map<String, Object>) document.get("functionalities");
                 Set<String> keys = func.keySet();
-                Collection<String> values = func.values();
-                ArrayList<Iterator<String>> iterators = new ArrayList<>(Arrays.asList(keys.iterator(), values.iterator()));
-                while (iterators.get(0).hasNext())
-                    this.getAllButtons().add(new ArrayList<>(List.of(new Button(iterators.get(1).next(), "name=" + iterators.get(0).next() + ",subj=" + this.subject))));
+                Collection<Object> values = func.values();
+                ArrayList<Iterator<?>> iterators = new ArrayList<>(Arrays.asList(keys.iterator(), values.iterator()));
+                while (iterators.get(0).hasNext()) {
+                    whatToDo = (String) iterators.get(0).next();
+                    if (whatToDo.equals("appointment")) {
+                        appointment = (Map<String, String>) iterators.get(1).next();
+                        this.getAllButtons().add(new ArrayList<>(List.of(new Button(appointment.get("title"), new URL(appointment.get("link"))))));
+                    } else
+                        this.getAllButtons().add(new ArrayList<>(List.of(new Button((String) iterators.get(1).next(), "name=" + whatToDo + ",subj=" + this.subject))));
+                }
             }
             this.getAllButtons().add(new ArrayList<>(List.of(new Button("⬆️️️ Torna all'inizio", "/restart"))));
             } catch(Exception e){
